--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -1,12 +1,17 @@
 <section>
-    <div *ngIf="showUserList" class="user-list">
+
+    <div *ngIf="showUserList" class="user-list" #userListContainer>
         <ul>
           <li *ngIf="filteredUsers.length === 0">Kein Nutzer gefunden</li>
-          <li *ngFor="let user of filteredUsers" (click)="selectUser(user)">
+          <li
+            *ngFor="let user of filteredUsers; let i = index"
+            (click)="selectUser(user)"
+            [class.active]="i === selectedIndex"
+          >
             {{ user }}
           </li>
         </ul>
-    </div>
+      </div>
 
     <div class="imgaes-preview-container">
         <div class="image-container" *ngFor="let preview of imagePreviews; let i = index">
