--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.scss
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.scss
@@ -139,11 +139,11 @@ input[type="file"] {
     background: var(--primary-bg);
     border: 1px solid #ddd;
     overflow-y: auto;
-    top: -200px;
+    top: -102px;
     left: 20px;
-    right: 20px;
-    height: 235px;
-    border-radius: 20px 20px 0 0;
+    width: 40%;
+    height: 120px;
+    border-radius: 20px;
     overflow-y: scroll;
     scrollbar-width: none;
   }
@@ -163,3 +163,9 @@ input[type="file"] {
   .user-list li:hover {
     background-color: var(--purple-2);
   }
+
+  .user-list .active {
+    background-color: #f0f0f0;  /* Hintergrund der Auswahl */
+    color: #333;                /* Textfarbe der Auswahl */
+  }
+
