--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
@@ -38,8 +38,8 @@ h3{
     @include dFlex(end, center)
 }
 
-input, textarea {
-    @include padding(18px, 20px, 18px, 20px);
+mat-form-field {
+    // @include padding(18px, 20px, 18px, 20px);
     border: 1px solid var(--border-light-purple);
     transition: border ease-in-out 0.3s;
     outline: none;
@@ -48,12 +48,65 @@ input, textarea {
     &:focus{
         border: 1.6px solid var(--purple-1);
     }
+    &:focus-within {
+        border: 1.6px solid var(--purple-1);
+    }
+    &:hover{
+        border: 1.6px solid var(--purple-1);
+    }
     resize: none; 
     scrollbar-width: none;    
     line-height: 24px; 
     min-height: calc(24px * 1 + 36px); 
     max-height: calc(24px * 3 + 36px);
-    @include nunito(400, 18px, black)
+    @include nunito(400, 18px, black);
+    width: 100%;
+}
+
+form {
+    width: 100%;
+    &:hover{
+        background-color: transparent !important;
+    }
+}
+
+::ng-deep mat-form-field{
+    width: 100%;
+    background-color: transparent;
+    &:hover{
+        background-color: transparent !important;
+    }
+}
+
+::ng-deep .mdc-text-field--filled, ::ng-deep .mdc-text-field, ::ng-deep .mat-mdc-form-field-focus-overlay, ::ng-deep .mdc-line-ripple::before,  ::ng-deep .mdc-line-ripple::after{
+    background-color: transparent !important;
+    border: 0px solid white !important;
+    &:hover{
+        background-color: transparent !important;
+    }
+    &:focus{
+        border: 0px solid white !important;
+    }
+}
+
+::ng-deep div.mat-mdc-autocomplete-panel {
+    background-color: white !important;
+}
+
+// Manipulate initial background color
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: transparent;
+  }
+  
+  // Manipulate background color on hover and focus
+  .mat-mdc-form-field-focus-overlay {
+    background-color: transparent;
+}
+
+::ng-deep .mdc-text-field--no-label:not(.mdc-text-field--textarea) .mat-mdc-form-field-input-control.mdc-text-field__input, 
+::ng-deep .mat-mdc-text-field-wrapper .mat-mdc-form-field-input-control,
+::ng-deep .mat-mdc-option .mdc-list-item__primary-text {
+    @include nunito(400, 18px, black);
 }
 
 .button{
@@ -63,3 +116,186 @@ input, textarea {
     @include dFlex(center, center);
     width: fit-content;
 }
+
+.contactPicture{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+
+.contactPictureContainer,
+.pictureInChipContainer {
+    position: relative;
+    @include dFlex(start, center)
+}
+
+.onlineStatus {
+    position: absolute;
+    right: 0px;
+    bottom: 6px;
+}
+
+.contact, 
+.contactAsChip {
+    transition: background-color 0.125s ease-in-out;
+    border-radius: 20px;
+    @include dFlex(start, center);
+    gap: 16px;
+    @include padding (4px, 20px, 4px, 20px);
+    width: fit-content;
+    @include nunito (400, 18px, black);
+
+    &:hover {
+        background-color: #ECEEFE;
+        cursor: pointer;
+    }
+}
+
+.mat-mdc-option,  .mdc-list-item{
+    background-color: white !important;
+    &:hover{
+        .mdc-list-item__primary-text{
+            cursor: pointer !important;
+            .contact {
+                background-color: #ECEEFE !important;
+            }  
+        }
+    }
+}
+
+.mat-mdc-option-active {
+    .contact {
+        background-color: #ECEEFE !important;
+    }  
+}
+
+::ng-deep .cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above) div.mat-mdc-autocomplete-panel {
+    border-radius: 30px !important;
+    border-top-left-radius: 0px !important;
+}
+
+::ng-deep  .mat-mdc-standard-chip .mdc-evolution-chip__action--primary::before {
+    border-width: 0px !important;
+    border-radius: 0px !important;
+    padding: 0px;
+    content: unset;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    width: fit-content;
+    z-index: 1;
+    border-style: solid;
+    border: 0px solid white;
+    &:hover{
+        background-color: transparent;
+    }
+}
+
+::ng-deep .mat-mdc-standard-chip.mdc-evolution-chip--with-trailing-action .mdc-evolution-chip__action--primary{
+    padding: 0px !important;
+}
+
+.contactAsChip{
+    gap: 8px;
+    @include padding (4px, 8px, 4px, 8px);
+    @include nunito (400, 18px, black);
+    background-color: #ECEEFE;
+    height: 48px;
+    &:hover {
+        background-color: var(--purple-2);
+        cursor: pointer;
+    }
+}
+
+.contactPictureInChip{
+    width: 32px !important;
+    height: 32px !important;
+    border-radius: 50px;
+}
+
+::ng-deep .mat-mdc-form-field-subscript-wrapper{
+    display: none;
+}
+
+::ng-deep .mat-mdc-text-field-wrapper{
+    overflow: auto !important;
+    scrollbar-width: thin;
+}
+
+::ng-deep .mdc-evolution-chip-set__chips{
+    row-gap: 12px;
+}
+// ::ng-deep .mat-mdc-option .mat-mdc-option-active .mdc-list-item{
+//     background-color: white !important;
+//     &:hover{
+//         .mdc-list-item__primary-text{
+//             cursor: pointer !important;
+//             .contact {
+//                 background-color: #ECEEFE !important;
+//             }  
+//         }
+//     }
+// }
+
+
+// .editable-field {
+//     display: inline-flex;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     outline: none;
+//     width: 100%;
+//     min-height: 30px;
+//   }
+  
+//   .chip {
+//     background-color: #e0e0e0;
+//     border-radius: 16px;
+//     border: 1.6px solid var(--purple-1);
+//     padding: 4px 8px;
+//     margin: 2px;
+//     display: inline-flex;
+//     align-items: center;
+//     cursor: pointer;
+//   }
+  
+//   .chip:hover {
+//     background-color: #d0d0d0;
+//   }
+  
+//   .chip::after {
+//     content: ' ✕';
+//     color: red;
+//     padding-left: 4px;
+//     font-weight: bold;
+//     cursor: pointer;
+//   }
+  
+//   .input-placeholder {
+//     display: inline-block;
+//     min-width: 5px;
+//     outline: none;
+//   }
+
+//   .editable-field:empty::before {
+//     content: attr(placeholder);
+//     color: #aaa;
+//   }
+  
+//   .member-suggestions {
+//     border: 1px solid #ccc;
+//     border-top: none;
+//     max-height: 150px;
+//     overflow-y: auto;
+//     background-color: #fff;
+//   }
+  
+//   .suggestion {
+//     padding: 8px;
+//     cursor: pointer;
+//   }
+  
+//   .suggestion:hover {
+//     background-color: #f0f0f0;
+//   }
