--- a/src/app/main-content/login/login-animation-inside/login-animation-inside.component.html
+++ b/src/app/main-content/login/login-animation-inside/login-animation-inside.component.html
@@ -1,7 +1,12 @@
-<div class="animationContainer">
-    <div class="devider"></div>
-    <div class="Logo-Wrapper">
-        <div class="logo"><img src="./img/main-assets/main-logo.svg"></div>
+<div class="main-wrapper">
+    <div class="content-wrapper">
+        <div class="animationContainer">
+            <div class="devider"></div>
+            <div class="Logo-Wrapper">
+                <div class="logo"><img src="./img/main-assets/main-logo.svg"></div>
+            </div>
+            <div class="devider"></div>
+        </div>
     </div>
-    <div class="devider"></div>
 </div>
+
