--- a/src/app/main-content/login/login.component.scss
+++ b/src/app/main-content/login/login.component.scss
@@ -13,7 +13,7 @@ app-input-field{
 
 aside{
     @include heightWidth($w: 100%, $h: auto);
-    @include figtree($fw: 400, $fs: 16px, $c: var(--secundary-bg));
+    @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--secundary-bg));
     @include dFlex ($jc: space-between);
     text-align: right;
 
@@ -36,7 +36,7 @@ aside{
 
         a{          
             @include heightWidth($w: 100%, $h: auto);
-            @include figtree($fw: 400, $fs: 18px, $c: var(--text-black));
+            @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
             margin: 0px 16px;
             padding: 8px 16px;
             border-radius: 36px;
@@ -53,9 +53,9 @@ aside{
 
 
 button{
-    @include figtree($fw: 400, $fs: 18px, $c: var(--secundary-bg));
-    min-width: 150px;
-    margin: 16px 16px;
+    @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--secundary-bg));
+    min-width: clamp(125px, 4vw, 160px);
+    margin: 16px;
     height: calc(60px - 16px);
     border-radius: 36px;
     padding: 8px 16px;
@@ -65,6 +65,11 @@ button{
     &:hover{
         background-color: var(--purple-2);
         cursor: pointer;
+    }
+
+    @include respond-to-maxWidth(smallMedium) {
+        margin: 2%;
+        letter-spacing: 0px;
     }
 }
 
@@ -84,12 +89,21 @@ button{
     @include dFlex ($jc: center);
     gap: 5%;
     @include heightWidth($w: 75%, $h: auto);
+
+    @include respond-to-maxWidth(small) {
+        margin-top: 16px;
+        gap: 0%;
+    }
 }
 
 .input-area{
     @include heightWidth($w: 100%, $h: auto);
     @include dFlex ();
     flex-direction: column;
+}
+
+.whiteBox::-webkit-scrollbar{
+    display: none;
 }
 
 .whiteBox{
@@ -103,20 +117,29 @@ button{
     max-height: 65dvh;
     box-shadow: 0px 2px 3px rgba(16, 0, 159, 0.1);
     gap: 1.5%;
+    overflow-y: scroll;
+
+    @include respond-to-maxWidth(smallMedium) {
+        gap: 0%;
+    }
+
+    @include respond-to-maxWidth(smallMedium) {
+        @include heightWidth($w: 90%, $h: 100%);
+    }
 
     h1{
-        @include figtree($fw: 600, $fs: 56px, $c: var(--purple-3));
-        margin-bottom: 16px;
+        @include figtree($fw: 600, $fs: clamp(42px,8vw,56px), $c: var(--purple-3));
+        margin-bottom: clamp(0px,4vw,18px);
     }
 
     p{
         @include heightWidth($w: 75%, $h: auto);
-        @include figtree($fw: 400, $fs: 18px, $c: var(--text-black));
+        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
         text-align: center;
     }
 
     a{
-        @include figtree($fw: 400, $fs: 18px, $c: var(--purple-2));
+        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--purple-2));
         margin: 0px 16px;
         padding: 8px 16px;
         border: 1px solid  transparent;
@@ -139,7 +162,7 @@ button{
     position: relative;
 
     span{
-        @include figtree($fw: 400, $fs: 18px, $c: var(--text-black));
+        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
         background-color: var(--secundary-bg);
         z-index: 1;
         padding: 8px 16px;
@@ -166,10 +189,15 @@ button{
     img{
         @include heightWidth($w: 36px, $h: 36px); 
         margin-right: 18px;
+
+        @include respond-to-maxWidth(smallMedium) {
+            margin-right: 8px;
+            @include heightWidth($w: clamp(24px, 8vw, 36px), $h: clamp(24px, 8vw, 36px)); 
+        }
     }
 
     span{
-        @include figtree($fw: 400, $fs: 18px, $c: var(--text-blue));
+        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-blue));
     }
 
     &:hover{
@@ -194,7 +222,7 @@ button{
         padding-inline-start: 0px;
 
         a{          
-            @include figtree($fw: 400, $fs: 18px, $c: var(--purple-2));
+            @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--purple-2));
             margin: 0px 16px;
             padding: 8px 16px;
             border: 1px solid  transparent;
