--- a/src/app/main-content/login/login-animation-inside/login-animation-inside.component.scss
+++ b/src/app/main-content/login/login-animation-inside/login-animation-inside.component.scss
@@ -2,21 +2,29 @@
 
 .main-wrapper{
     position: absolute;
-    z-index: 99;
     @include heightWidth($w:100%, $h: 100%);
     @include dFlex;
-    background-color: transparent;
+    align-items: self-start;
+    animation: heigh-scaling ease-in-out forwards 2.0;
+    animation-delay: 3.0s;
+    max-height: 100%;
+}
+
+@keyframes heigh-scaling {
+    to{
+        max-height: 100px;
+    }
 }
 
 .content-wrapper{
     @include heightWidth($w:100%, $h: 100%);
     position: relative;
-    background-color: transparent;
-
     @include respond-to-maxWidth(smallMedium) {
-        @include heightWidth($w:256px, $h: 100%);
+        @include heightWidth($w:256px);
     }
+
 }
+
 
 .Logo-Wrapper{
     @include heightWidth($w:33%, $h: 100%);
@@ -24,7 +32,7 @@
     animation: shrink-width 0.75s ease-out forwards 2.0s;
     animation-delay: 2.0s;
     @include respond-to-maxWidth(smallMedium) {
-        @include heightWidth($w:100%, $h: 100%);
+        @include heightWidth($w:100%);
         max-width: 256px;
     }
 
