--- a/src/app/main-content/chat/message/message.component.html
+++ b/src/app/main-content/chat/message/message.component.html
@@ -1,27 +1,34 @@
 <div class="new-message-container">
-    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()" [ngClass]="checkUser() ? 'row-reverse' : ''">
+    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()"
+        [ngClass]="checkUser() ? 'row-reverse' : ''">
 
 
-        <img class="profile-image" src="{{message.profileImage}}" alt=""  [ngStyle]="checkUser() ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
+        <img class="profile-image" src="{{message.profileImage}}" alt=""
+            [ngStyle]="checkUser() ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
 
         <div class="message-container">
 
-            
+
             <div class="name" [ngClass]="checkUser() ? 'row-reverse flex-end' : 'flex-start'">
                 <h5 [ngClass]="checkUser() ? 'ml' : 'mr'">{{message.name}}</h5>
                 <p>{{message.time}}</p>
             </div>
 
-            <div class="message" (keydown)="handleKeydown($event)" *ngIf="message.message" [ngClass]="checkUser() ? 'myMessage' : 'memberMessage'">
-                <p class="message-text" *ngIf="isEdit == false" [ngClass]="checkUser() ? 'text.light' : 'text-dark'">{{message.message}}</p>
-                <textarea [(ngModel)]="editMessageText" *ngIf="isEdit" #textArea (input)="autoGrow()" value="{{message.message}}"></textarea>
-                <p *ngIf="isEdit" class="edit-info-text">Esc zum <span (click)="cancelEdit()">Abbrechen</span> • Enter zum <span (click)="saveText()">Speichern</span></p>
+            <div class="message" (keydown)="handleKeydown($event)" *ngIf="message.message"
+                [ngClass]="checkUser() ? 'myMessage' : 'memberMessage'">
+                <p class="message-text" *ngIf="isEdit == false" [ngClass]="checkUser() ? 'text.light' : 'text-dark'">
+                    {{message.message}}</p>
+                <textarea [(ngModel)]="editMessageText" *ngIf="isEdit" #textArea (input)="autoGrow()"
+                    value="{{message.message}}"></textarea>
+                <p *ngIf="isEdit" class="edit-info-text">Esc zum <span (click)="cancelEdit()">Abbrechen</span> • Enter
+                    zum <span (click)="saveText()">Speichern</span></p>
             </div>
 
             <div class="postet-image-container" [ngClass]="checkUser() ? 'flex-end' : 'flex-start'">
                 <div class="image-container" *ngFor="let attachmen of message.attachmen; let i = index">
                     <img class="image" [src]="attachmen">
-                    <button *ngIf="isEdit" (click)="deleteImage(i)" class="edit-images"><mat-icon>delete</mat-icon></button>
+                    <button *ngIf="isEdit" (click)="deleteImage(i)"
+                        class="edit-images"><mat-icon>delete</mat-icon></button>
                 </div>
             </div>
 
@@ -30,11 +37,14 @@
                 <p class="answer-time">Letze Antwort 14:56</p>
             </div>
 
+            <app-message-reation [message]="message"></app-message-reation>
             <div class="reaction-container" [ngClass]="checkUser() ? 'flex-end' : 'flex-start'">
-                <button *ngIf="message.reactions.like.length" (click)="likeMessage()"><img src="/img/reactions/like.svg" alt="">
+                <button *ngIf="message.reactions.like.length" (click)="likeMessage()"><img src="/img/reactions/like.svg"
+                        alt="">
                     <p>{{message.reactions.like.length}}</p>
                 </button>
-                <button *ngIf="message.reactions.rocket.length" (click)="rocketMessage()"><img src="/img/reactions/rocket.svg" alt="">
+                <button *ngIf="message.reactions.rocket.length" (click)="rocketMessage()"><img
+                        src="/img/reactions/rocket.svg" alt="">
                     <p>{{message.reactions.rocket.length}}</p>
                 </button>
             </div>
@@ -46,19 +56,10 @@
             <p>{{message.createdAt}}</p>
         </div>
 
-        <div class="options" *ngIf="isMessageHover" [ngClass]="checkUser() ? '' : 'option-menu'">
-            <button class="options-btn" (click)="rocketMessage()"><img src="/img/reactions/rocket.svg" alt=""></button>
-            <button class="options-btn" (click)="likeMessage()"><mat-icon><img src="/img/reactions/like.svg" alt=""></mat-icon></button>
-            <button class="options-btn"><mat-icon>sentiment_satisfied</mat-icon></button>
-            <button class="options-btn" (click)="openThread()"><mat-icon>comment</mat-icon></button>
-            <button *ngIf="checkUser()" class="options-btn" (click)="openEditMenu()"><mat-icon>more_vert</mat-icon></button>
-
-            <div class="edit-message-menu" *ngIf="isMessageEditMenuOpen">
-              <button (click)="editMessage()">Bearbeiten</button>
-              <button (click)="deleteMessage()">Löschen</button>
-            </div>
-        </div>
-
+        <app-message-options [message]="message" [isMessageHover]="isMessageHover"
+            [isMessageEditMenuOpen]="isMessageEditMenuOpen" [editMessageText]="editMessageText" (edit)="editMessage()"
+            (deleteEvent)="deleteMessage()">
+        </app-message-options>
 
     </div>
 </div>
