--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -1,14 +1,6 @@
+<app-headmenu-login></app-headmenu-login>
 <app-login-animation></app-login-animation>
 <app-login-animation-inside></app-login-animation-inside>
-
-<aside>
-    <nav>
-        <ul>
-            <li><a>New at DABubble?</a></li>
-            <li><a>Create Account</a></li>
-        </ul>
-    </nav>
-</aside>
 
 <section class="MainWrapper">
  
@@ -34,11 +26,7 @@
 
     </div>
 
-    <nav class="submenu">
-        <ul>
-            <li><a>imprint</a></li>
-            <li><a>Data-Protection</a></li>
-        </ul>
-    </nav>
+    <app-submenu-login></app-submenu-login>
 
 </section>
+
