max width to login screen 1920px

--- a/src/app/main-content/login/headmenu-login/headmenu-login.component.html
+++ b/src/app/main-content/login/headmenu-login/headmenu-login.component.html
@@ -1,6 +1,10 @@
-<nav>
-    <ul>
-        <li>New at DABubble?</li>
-        <li><a>Create Account</a></li>
-    </ul>
-</nav>
+<section>
+    <div class="wrapper">
+        <nav>
+            <ul>
+                <li>New at DABubble?</li>
+                <li><a>Create Account</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
