--- a/src/app/main-content/login/login-animation-inside/login-animation-inside.component.scss
+++ b/src/app/main-content/login/login-animation-inside/login-animation-inside.component.scss
@@ -1,19 +1,35 @@
 @import '../../../../mixin.scss';
 
+section{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 98;
+    @include heightWidth($w: 100%, $h: 100%);
+    @include dFlex;
+    animation: heigh-scaling ease-in-out forwards;
+    animation-delay: 3.0s;
+    padding: 36px 0px 0px 36px;
+
+    @include respond-to-maxWidth(medium) {
+        padding: 36px 0px 0px 0px;
+    }
+}
+
+.wrapper{
+    position: relative;
+    @include heightWidth($w: 100%, $h: 100%);
+    max-width: 1920px;
+    @include dFlex;
+}
+
 .main-wrapper{
     z-index: 98;
     position: absolute;
     @include heightWidth($w:100%, $h: 100%);
     @include dFlex;
     align-items: self-start;
-    animation: heigh-scaling ease-in-out forwards 2.0;
-    animation-delay: 3.0s;
     max-height: 100%;
-    padding: 36px;
-
-    @include respond-to-maxWidth(medium) {
-        padding: 36px 0px;
-    }
 }
 
 @keyframes heigh-scaling {
