--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -1,48 +1,32 @@
 <section>
 
-    <div *ngIf="showUserList" class="user-list" #userListContainer>
-        <ul>
-          <li *ngIf="filteredUsers.length === 0">Kein Nutzer gefunden</li>
-          <li
-            *ngFor="let user of filteredUsers; let i = index"
-            (click)="selectUser(user)"
-            [class.active]="i === selectedIndex"
-          >
-            {{ user }}
-          </li>
-        </ul>
+  <app-user-list [messageField]="messageField" [users]="users"></app-user-list>
+  <app-images-preview [imagePreviews]="imagePreviews"></app-images-preview>
+
+  <div class="message-field-container">
+    <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField" (input)="onInput($event)"></textarea>
+
+    <div class="message-options-container">
+
+      <div class="options-btn">
+        <label for="file-upload" class="flie-label">
+          <mat-icon class="open-file">add</mat-icon>
+        </label>
+        <input id="file-upload" type="file" [(ngModel)]="imageUploads" (change)="onFileSelected($event)" multiple>
+
+
+        <div class="between-line"></div>
+        <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
+        <!-- <button (click)="addTag()"><mat-icon>alternate_email</mat-icon></button> -->
       </div>
 
-    <div class="imgaes-preview-container">
-        <div class="image-container" *ngFor="let preview of imagePreviews; let i = index">
-            <img [src]="preview" alt="Bildvorschau">
-            <button (click)="deleteImage(i)" class="edite-images"><mat-icon>delete</mat-icon></button>
-        </div>
-      </div>
-
-    <div class="message-field-container">
-        <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField"  (input)="onInput($event)"></textarea>
-
-        <div class="message-options-container">
-
-            <div class="options-btn">
-                <label for="file-upload" class="flie-label">
-                    <mat-icon class="open-file">add</mat-icon>
-                </label>
-                <input id="file-upload" type="file" [(ngModel)]="imageUploads" (change)="onFileSelected($event)" multiple>
-
-
-                <div class="between-line"></div>
-                <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
-                <button (click)="addTag()"><mat-icon>alternate_email</mat-icon></button>
-            </div>
-
-            <button [disabled]="!(imagePreviews.length > 0 || messageField.length > 0)" class="send-btn" (click)="sendMessage()"><mat-icon>send</mat-icon></button>
-        </div>
-
-        <div class="emojis-container" *ngIf="openEmojis">
-            <emoji-mart title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
-        </div>
+      <button [disabled]="!(imagePreviews.length > 0 || messageField.length > 0)" class="send-btn"
+        (click)="sendMessage()"><mat-icon>send</mat-icon></button>
     </div>
+
+    <div class="emojis-container" *ngIf="openEmojis">
+      <emoji-mart title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
+    </div>
+  </div>
 
 </section>
