--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.html
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.html
@@ -40,7 +40,7 @@
                 <div class="contact">
                     <div class="contactPictureContainer">
                         <img class="contactPicture" src="{{ member.img }}" alt="User picture">
-                        <img class="onlineStatus" [src]="member.isOnline ? '/img/profil-pic/online.svg' : '/img/profil-pic/offline.svg'" alt="User picture">
+                        <img class="onlineStatus" [src]="member.isOnline ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="User picture">
                     </div>
                     <span>{{ member.name }}</span>
                 </div>
