--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -7,9 +7,9 @@
 
     <div class="add-members-container">
         <div class="active-members-image-container">
-            <img src="/img/profil-pic/001.svg" alt="">
-            <img style="margin-left: -10px;" src="/img/profil-pic/001.svg" alt="">
-            <img style="margin-left: -10px;" src="/img/profil-pic/001.svg" alt="">
+            <img src="/img/profile-pic/001.svg" alt="">
+            <img style="margin-left: -10px;" src="/img/profile-pic/001.svg" alt="">
+            <img style="margin-left: -10px;" src="/img/profile-pic/001.svg" alt="">
         </div>
 
         <p>3</p>
