--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -48,7 +48,7 @@
             <div class="contact" *ngFor="let member of members; let i = index">
                 <div class="contactPicture">
                     <img class="userImage" src="{{member.img}}" alt="Member image">
-                    <img class="onlineStatus" [src]="member.isOnline ? '/img/profil-pic/online.svg' : '/img/profil-pic/offline.svg'" alt="Online status">
+                    <img class="onlineStatus" [src]="member.isOnline ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="Online status">
                 </div>
                 <span>{{member.name}}</span>
             </div>
